// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertDialog component supports simple dialogs 1`] = `
"<div
  class=\\"mdc-dialog\\"
>
  <div
    class=\\"mdc-dialog__container\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"mdc-dialog__surface\\"
      role=\\"alertdialog\\"
    >
      <div
        class=\\"mdc-dialog__content\\"
      >
        foo
      </div>
      <div
        class=\\"mdc-dialog__actions\\"
      >
        <button
          class=\\"mdc-button mdc-dialog__button\\"
          data-mdc-dialog-action=\\"ok\\"
          data-mdc-dialog-button-default=\\"\\"
          type=\\"button\\"
        >
          <div
            class=\\"mdc-button__ripple\\"
          />
          <span
            class=\\"mdc-button__label\\"
          >
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class=\\"mdc-dialog__scrim\\"
  />
</div>"
`;

exports[`AlertDialog component supports simple dialogs 2`] = `
"<div
  class=\\"mdc-dialog\\"
>
  <div
    class=\\"mdc-dialog__container\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"mdc-dialog__surface bar\\"
      role=\\"alertdialog\\"
    >
      <div
        class=\\"mdc-dialog__content\\"
      >
        foo
      </div>
      <div
        class=\\"mdc-dialog__actions\\"
      >
        <button
          class=\\"mdc-button mdc-dialog__button\\"
          data-mdc-dialog-action=\\"cancel\\"
          data-mdc-dialog-button-default=\\"\\"
          type=\\"button\\"
        >
          <div
            class=\\"mdc-button__ripple\\"
          />
          <span
            class=\\"mdc-button__label\\"
          >
            Cancel
          </span>
        </button>
        <button
          class=\\"mdc-button mdc-dialog__button\\"
          data-mdc-dialog-action=\\"ok\\"
          type=\\"button\\"
        >
          <div
            class=\\"mdc-button__ripple\\"
          />
          <span
            class=\\"mdc-button__label\\"
          >
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class=\\"mdc-dialog__scrim\\"
  />
</div>"
`;
